--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="google-site-verification" content="UEgbaCmJpFbZgaLkW1oJ81XspGMrBz46E6NbcutLsVM" />
+    <meta google-site-verification=UEgbaCmJpFbZgaLkW1oJ81XspGMrBz46E6NbcutLsVM />
     <title>Document</title>
 
     <!-- css links -->
